# web_scrapping

./: pyproject.toml
