[tool.poetry]
name = "web_s"
version = "0.1.0"
description = "python for web scrapping"
authors = ["khaled"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
